gcc/testsuite/rust/rustc/ui/parser/bad-value-ident-true.rs
fn true() { } // { dg-error "" "" { target *-*-* } }
fn main() { }

